SPIMI alg upd.