@@ -5,52 +5,37 @@ import com.github.mertakdut.Reader;
 import com.github.mertakdut.exception.OutOfPagesException;
 import com.github.mertakdut.exception.ReadingException;
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
+import java.nio.file.Paths;
 import java.util.*;
 
 public class Spimi {
-    private static int BLOCK_SIZE = 1000;
     private final Reader reader;
-    private final StringBuilder resBuilder;
     private final File[] documents;
-    int filesNum;
+    private final String outputFilePath;
 
-    public Spimi(String filePath) {
-        documents = new File(filePath).listFiles();
-        filesNum = documents.length;
-        resBuilder = new StringBuilder();
-        reader = new Reader();
-        reader.setIsIncludingTextContent(true);
+    public Spimi(String filePath, String outputFilePath) {
+        this.documents = new File(filePath).listFiles();
+        this.reader = new Reader();
+        this.outputFilePath = outputFilePath;
+        this.reader.setIsIncludingTextContent(true);
     }
 
     public void executeSpimiAlg() {
         long startTime = System.currentTimeMillis();
-        List<List<String>> blocks = buildBlocks();
-        Map<String, List<Integer>> indexes = indexBlocks(blocks);
-        Map<String, List<Integer>> res =  mergedIndex(indexes);
+        indexBlocks();
+        Map<String, List<Integer>> mergedIndex = mergeIndex();
+        writeToFile("src/main/additional_files/spimi_result", mergedIndex);
         long endTime = System.currentTimeMillis();
         System.out.println("Time taken: " + (endTime - startTime) + " ms");
     }
-    public void writeToFile(String fileName) {
-        new File("src/main/additional_files/").mkdirs();
-        File spimiRes = new File("src/main/additional_files/" + fileName);
-        try (BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(spimiRes))
-        ) {
-            bufferedWriter.write(String.valueOf(resBuilder));
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
 
-    private List<List<String>> buildBlocks() {
-        // Step 1: Read input files and split into blocks
+    private void indexBlocks() {
+        // Read input files and split into blocks
         BookSection bookSection;
-        List<List<String>> blocks = new ArrayList<>();
+        int blockId = 0;
+        int docId = 1;
         for (File file : documents) {
-            List<String> block = new ArrayList<>();
             try {
                 reader.setFullContent(file.getPath());
                 int numOfPages = getNumOfPages();
@@ -58,47 +43,67 @@ public class Spimi {
                     bookSection = reader.readSection(pageIndex);
                     String sectionTextContent = bookSection.getSectionTextContent();
                     String[] wordsSection = sectionTextContent.split("\\W+");
-                    block.addAll(List.of(wordsSection));
-                    resBuilder.append(block);
-                    if (block.size() >= BLOCK_SIZE) {
-                        blocks.add(block);
-                        block = new ArrayList<>();
-                    }
+                    List<String> block = new ArrayList<>(Arrays.asList(wordsSection));
+                    writeBlockToFile(blockId, docId, block);
+                    blockId++;
                 }
-                if (!block.isEmpty())
-                    blocks.add(block);
             } catch (ReadingException | OutOfPagesException e) {
                 e.printStackTrace();
-                return new ArrayList<>();
             }
+            docId++;
         }
-        return blocks;
     }
 
-    private Map<String, List<Integer>> indexBlocks(List<List<String>> blocks) {
-        Map<String, List<Integer>> indexedBlocks = new HashMap<>();
-        int blockId = 0;
-        for (List<String> block : blocks) {
+    private Map<String, List<Integer>> mergeIndex() {
+        String outputFolderPath = Paths.get(outputFilePath).getParent().toString();
+        Map<String, List<Integer>> mergedIndex = new TreeMap<>();
+        for (File blockFile : new File(outputFolderPath + "/blocks").listFiles()) {
+            try (BufferedReader br = new BufferedReader(new FileReader(blockFile))) {
+                String line;
+                while ((line = br.readLine()) != null) {
+                    List<String> parts = Arrays.asList(line.split(":"));
+                    String term = parts.get(0);
+                    List<Integer> postingsList = parts.subList(1, parts.size())
+                            .stream()
+                            .map(Integer::parseInt)
+                            .toList();
+                    List<Integer> mergedPostingsList = mergedIndex.getOrDefault(term, new ArrayList<>());
+                    mergedPostingsList.addAll(postingsList);
+                    mergedIndex.put(term, mergePostingsLists(mergedPostingsList));
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+        return mergedIndex;
+    }
+
+    private void writeToFile(String fileName, Map<String, List<Integer>> mergedIndex) {
+        try (BufferedWriter bw = new BufferedWriter(new FileWriter(fileName))) {
+            for (String term : mergedIndex.keySet()) {
+                List<Integer> postingsList = mergedIndex.get(term);
+                String postingsStr = String.join(",", postingsList.stream().map(Object::toString).toArray(String[]::new));
+                bw.write(term + ":" + postingsStr + "\n");
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void writeBlockToFile(int blockId, int docId, List<String> block) {
+        String outputFolderPath = Paths.get(outputFilePath).getParent().toString();
+        File blockFile = new File(outputFolderPath + "/blocks/block_" + blockId);
+        try (BufferedWriter bw = new BufferedWriter(new FileWriter(blockFile))) {
             for (String term : block) {
-                List<Integer> postingsList = indexedBlocks.getOrDefault(term, new ArrayList<>());
-                if (postingsList.isEmpty() || postingsList.get(postingsList.size() - 1) != blockId)
-                    postingsList.add(blockId);
-                indexedBlocks.put(term, postingsList);
+                bw.write(term + ':' + docId + '\n');
             }
-            blockId++;
+        } catch (IOException e) {
+            e.printStackTrace();
         }
-        return indexedBlocks;
     }
 
-    private Map<String, List<Integer>> mergedIndex(Map<String, List<Integer>> partialIndex) {
-        Map<String, List<Integer>> index = new TreeMap<>();
-        for (String term : partialIndex.keySet()) {
-            List<Integer> postingsList = partialIndex.get(term);
-            List<Integer> mergedPostingsList = index.getOrDefault(term, new ArrayList<>());
-            mergedPostingsList.addAll(postingsList);
-            index.put(term, mergePostingsLists(mergedPostingsList));
-        }
-        return index;
+    private int getNumOfPages() {
+        return reader.getToc().getNavMap().getNavPoints().size();
     }
 
     private List<Integer> mergePostingsLists(List<Integer> postingsList) {
@@ -106,9 +111,5 @@ public class Spimi {
         List<Integer> mergedPostingsList = new ArrayList<>(set);
         Collections.sort(mergedPostingsList);
         return mergedPostingsList;
-    }
-
-    private int getNumOfPages() {
-        return reader.getToc().getNavMap().getNavPoints().size();
     }
 }
